# genai-workshop

./: RAG.R  README.md
Python/: README.md  pyproject.toml  quickstart.py  temperature.py  utils.py
R/: README.md  chat.R  chat_image.R  embeddings_retrieval.R  pixi.toml
