[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.3.0",
    "portkey-ai>=1.12.2",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
