[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.4.0",
    "portkey-ai>=2.1.0",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[dependency-groups]
dev = [
    "ruff",
]
